// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`snapshot: static WebMCP tool metadata and input schema 1`] = `
{
  "annotations": {
    "readOnlyHint": false,
    "untrustedContentHint": false,
  },
  "description": "Draft feedback about an observed bug, blocked task, confusing behavior, or concrete improvement idea in this application. Confirm with the user before transmitting. Describe only evidence available from the current task; do not invent failures, repeat an existing report, or include credentials or personal data. Do not use for unrelated requests or hypothetical problems. A draft is not proof of submission; only a success receipt confirms acceptance.",
  "inputSchema": {
    "additionalProperties": false,
    "properties": {
      "description": {
        "maxLength": 4000,
        "minLength": 1,
        "pattern": "\\S",
        "type": "string",
      },
      "expectedBehavior": {
        "maxLength": 2000,
        "type": "string",
      },
      "kind": {
        "enum": [
          "bug",
          "blocked_task",
          "confusing_behavior",
          "idea",
        ],
        "type": "string",
      },
      "reproductionSteps": {
        "items": {
          "maxLength": 500,
          "minLength": 1,
          "pattern": "\\S",
          "type": "string",
        },
        "maxItems": 10,
        "type": "array",
      },
      "title": {
        "maxLength": 160,
        "minLength": 1,
        "pattern": "\\S",
        "type": "string",
      },
    },
    "required": [
      "kind",
      "title",
      "description",
    ],
    "type": "object",
  },
  "name": "filika_submit_feedback",
  "title": "Submit feedback for review",
}
`;

exports[`snapshot: complete V1 envelope schema and limits 1`] = `
{
  "limits": {
    "applicationRelease": 80,
    "description": 4000,
    "envelopeBytes": 32768,
    "expectedBehavior": 2000,
    "projectKey": 128,
    "reproductionStep": 500,
    "reproductionSteps": 10,
    "routeLabel": 120,
    "sdkVersion": 32,
    "title": 160,
    "toolInputBytes": 24576,
  },
  "schema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "context": {
        "additionalProperties": false,
        "properties": {
          "applicationRelease": {
            "maxLength": 80,
            "minLength": 1,
            "pattern": "\\S",
            "type": "string",
          },
          "routeLabel": {
            "maxLength": 120,
            "minLength": 1,
            "pattern": "\\S",
            "type": "string",
          },
          "sdkVersion": {
            "maxLength": 32,
            "minLength": 5,
            "pattern": "^(0|[1-9][0-9]*)\\.(0|[1-9][0-9]*)\\.(0|[1-9][0-9]*)$",
            "type": "string",
          },
        },
        "required": [
          "sdkVersion",
        ],
        "type": "object",
      },
      "eventId": {
        "maxLength": 36,
        "minLength": 36,
        "pattern": "^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$",
        "type": "string",
      },
      "feedback": {
        "additionalProperties": false,
        "properties": {
          "description": {
            "maxLength": 4000,
            "minLength": 1,
            "pattern": "\\S",
            "type": "string",
          },
          "expectedBehavior": {
            "maxLength": 2000,
            "type": "string",
          },
          "kind": {
            "enum": [
              "bug",
              "blocked_task",
              "confusing_behavior",
              "idea",
            ],
            "type": "string",
          },
          "reproductionSteps": {
            "items": {
              "maxLength": 500,
              "minLength": 1,
              "pattern": "\\S",
              "type": "string",
            },
            "maxItems": 10,
            "type": "array",
          },
          "title": {
            "maxLength": 160,
            "minLength": 1,
            "pattern": "\\S",
            "type": "string",
          },
        },
        "required": [
          "kind",
          "title",
          "description",
        ],
        "type": "object",
      },
      "projectKey": {
        "maxLength": 128,
        "minLength": 1,
        "pattern": "^[A-Za-z0-9_-]+$",
        "type": "string",
      },
      "schemaVersion": {
        "const": 1,
        "type": "integer",
      },
    },
    "required": [
      "schemaVersion",
      "projectKey",
      "eventId",
      "feedback",
      "context",
    ],
    "type": "object",
  },
}
`;

exports[`snapshot: validated receipt shape 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "duplicate": {
      "type": "boolean",
    },
    "eventId": {
      "maxLength": 36,
      "minLength": 36,
      "pattern": "^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$",
      "type": "string",
    },
    "feedbackId": {
      "maxLength": 36,
      "minLength": 36,
      "pattern": "^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$",
      "type": "string",
    },
    "receivedAt": {
      "maxLength": 24,
      "minLength": 24,
      "pattern": "^[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{2}\\.[0-9]{3}Z$",
      "type": "string",
    },
    "schemaVersion": {
      "const": 1,
      "type": "integer",
    },
  },
  "required": [
    "schemaVersion",
    "eventId",
    "feedbackId",
    "receivedAt",
    "duplicate",
  ],
  "type": "object",
}
`;

exports[`snapshot: closed outcomes, semantics, and execution limits 1`] = `
{
  "codes": [
    "success",
    "invalid_input",
    "cancelled",
    "timeout",
    "aborted",
    "collector_rejected",
    "internal_error",
    "outcome_unknown",
  ],
  "limits": {
    "outcomeBytes": 1024,
    "receiptBytes": 1024,
    "registrationTimeoutMs": 5000,
    "requestTimeoutMs": 10000,
    "reviewTimeoutMs": 120000,
  },
  "rules": {
    "aborted": "Execution was aborted before transmission; no request was dispatched.",
    "cancelled": "The user cancelled review before transmission; no request was dispatched.",
    "collector_rejected": "The collector returned a documented rejection that guarantees no acceptance.",
    "internal_error": "A local failure occurred before transmission; no request was dispatched.",
    "invalid_input": "Draft validation failed before transmission; no request was dispatched.",
    "outcome_unknown": "A request was dispatched but acceptance or rejection could not be confirmed.",
    "success": "A validated receipt confirms acceptance; duplicate receipts also use success.",
    "timeout": "Review expired before transmission; no request was dispatched.",
  },
  "schema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "oneOf": [
      {
        "additionalProperties": false,
        "properties": {
          "code": {
            "const": "success",
            "type": "string",
          },
          "receipt": {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "additionalProperties": false,
            "properties": {
              "duplicate": {
                "type": "boolean",
              },
              "eventId": {
                "maxLength": 36,
                "minLength": 36,
                "pattern": "^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$",
                "type": "string",
              },
              "feedbackId": {
                "maxLength": 36,
                "minLength": 36,
                "pattern": "^[0-9a-f]{8}-[0-9a-f]{4}-4[0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$",
                "type": "string",
              },
              "receivedAt": {
                "maxLength": 24,
                "minLength": 24,
                "pattern": "^[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{2}\\.[0-9]{3}Z$",
                "type": "string",
              },
              "schemaVersion": {
                "const": 1,
                "type": "integer",
              },
            },
            "required": [
              "schemaVersion",
              "eventId",
              "feedbackId",
              "receivedAt",
              "duplicate",
            ],
            "type": "object",
          },
        },
        "required": [
          "code",
          "receipt",
        ],
        "type": "object",
      },
      {
        "additionalProperties": false,
        "properties": {
          "code": {
            "enum": [
              "invalid_input",
              "cancelled",
              "timeout",
              "aborted",
              "collector_rejected",
              "internal_error",
              "outcome_unknown",
            ],
            "type": "string",
          },
        },
        "required": [
          "code",
        ],
        "type": "object",
      },
    ],
  },
}
`;

exports[`snapshot: public configuration and lifecycle 1`] = `
{
  "diagnostics": [
    "invalid_state",
    "security_error",
    "not_allowed",
    "registration_timeout",
    "unknown_error",
  ],
  "schema": {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "additionalProperties": false,
    "properties": {
      "applicationRelease": {
        "maxLength": 80,
        "minLength": 1,
        "pattern": "\\S",
        "type": "string",
      },
      "endpoint": {
        "format": "uri",
        "maxLength": 2048,
        "minLength": 1,
        "pattern": "^https://[^\\s/?#@\\\\]+(?:/[^\\s?#\\\\]*)?$",
        "type": "string",
      },
      "projectKey": {
        "maxLength": 128,
        "minLength": 1,
        "pattern": "^[A-Za-z0-9_-]+$",
        "type": "string",
      },
      "routeLabel": {
        "maxLength": 120,
        "minLength": 1,
        "pattern": "\\S",
        "type": "string",
      },
    },
    "required": [
      "projectKey",
      "endpoint",
    ],
    "type": "object",
  },
  "scriptAttributes": {
    "applicationRelease": "data-application-release",
    "endpoint": "data-endpoint",
    "projectKey": "data-project-key",
    "routeLabel": "data-route-label",
  },
  "transitions": {
    "disposed": {
      "dispose": "disposed",
      "initialize": "initializing",
      "invalid_config": "invalid_configuration",
    },
    "initializing": {
      "dispose": "disposed",
      "registered": "ready",
      "rejected": "registration_rejected",
      "unsupported": "unsupported_browser",
    },
    "invalid_configuration": {
      "dispose": "disposed",
      "initialize": "initializing",
      "invalid_config": "invalid_configuration",
    },
    "ready": {
      "dispose": "disposed",
    },
    "registration_rejected": {
      "dispose": "disposed",
    },
    "uninitialized": {
      "dispose": "disposed",
      "initialize": "initializing",
      "invalid_config": "invalid_configuration",
    },
    "unsupported_browser": {
      "dispose": "disposed",
    },
  },
}
`;
